src/test/deca/context/invalid/created/class_incorrect_new5.deca
//Description :
// Initialisation invalide
//
// Resultats :
// Erreur

{
    zerzer a = new zerzer();
}
